[project]
name = "live_interview_tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "kavyanegi0007",email = "kavyanegi0007@gmail.com"}
]
readme = "README.md"
package-mode = false
dependencies = [
    "gaze-tracking (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
