[project]
name = "live_interview_tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "kavyanegi0007",email = "kavyanegi0007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
package-mode = false
dependencies = [
    "gaze-tracking (>=0.0.1,<0.0.2)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
